--- a/app/styles/components/navbar.css
+++ b/app/styles/components/navbar.css
@@ -18,7 +18,7 @@
   margin: 0;
   list-style: none;
   flex: 1;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .navbar-links li {
