feat: add CollectionCard component with styles and integrate into homepage layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,4 +5,4 @@
 @import "./styles/components/header.css";
 @import "./styles/components/navbar.css";
 @import "./styles/components/hero.css";
-
+@import "./styles/components/collectionCard.css";
