--- a/app/styles/components/header.css
+++ b/app/styles/components/header.css
@@ -4,5 +4,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: var(--gradient);
+  background: var(--primary);
+  background-image: linear-gradient(
+    135deg, 
+    rgba(230,177,42,0.2) 0%, 
+    rgba(18,144,190,0.2) 50%, 
+    rgba(222,100,201,0.2) 100%
+  );
 }
