--- a/app/styles/variables.css
+++ b/app/styles/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #f3f3f3;
+  --background: #f7f9fc;
   --foreground: #171717;
   --primary: #00d185;
   --primary-dark: #167653;
