--- a/app/styles/components/header.css
+++ b/app/styles/components/header.css
@@ -1,14 +1,169 @@
 .logo-container {
+  position: relative;
   width: 100%;
   height: 257px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: var(--primary);
-  background-image: linear-gradient(
-    135deg, 
-    rgba(230,177,42,0.2) 0%, 
-    rgba(18,144,190,0.2) 50%, 
-    rgba(222,100,201,0.2) 100%
-  );
+  background: var(--gradient);
+  overflow: hidden;
+}
+
+.logo {
+  z-index: 10;
+}
+
+.h-sticker {
+  position: absolute;
+  opacity: 0.80;
+  transition: 
+    top 0.4s ease,
+    left 0.4s ease,
+    width 0.4s ease,
+    transform 0.4s ease;
+  height: auto;
+}
+
+.h-sticker:hover {
+  transform: scale(1.1) rotate(0deg); /* subtle grow + straighten */
+  z-index: 100;
+}
+
+.sticker-1 {
+  top: -30px;
+  left: -50px;
+  transform: rotate(-19.76deg);
+  z-index: 2;
+}
+
+.sticker-2 {
+  width: 227px;
+  top: 98px;
+  left: 156px;
+  z-index: 3;
+}
+
+.sticker-3 {
+  width: 250px;
+  top: 0px;
+  left: 285px;
+  z-index: 2 ;
+}
+
+.sticker-4 {
+  width: 257px;
+  top: 55px;
+  left: 896px;
+  transform: rotate(-3.409deg);
+  z-index: 2;
+}
+
+.sticker-5 {
+  top: -26px;
+  left: 1023px;
+  z-index: 3;
+}
+
+.sticker-6 {
+ width: 236px;
+ top: -20px;
+ left: 1190px;
+ transform: rotate(12.275deg); 
+ z-index: 2;
+}
+
+@media (max-width: 1280px) {
+  .sticker-2 { width: 200px; left: 120px; top: 90px; }
+  .sticker-3 { width: 210px; left: 240px; }
+  .sticker-4 { width: 230px; left: 760px; }
+  .sticker-5 { width: 280px; left: 870px;}
+  .sticker-6 { width: 210px; left: 1020px; }
+}
+
+@media (max-width: 1024px) {
+  .sticker-1 { 
+    width: 200px;
+    left: -30px; 
+    top: 10px; }
+  
+  .sticker-2 {
+    width: 170px;
+    left: 90px;
+    top: 80px;
+  }
+
+  .sticker-3 {
+    width: 180px;
+    left: 150px;
+  }
+
+  .sticker-4 {
+    width: 190px;
+    left: 560px;
+    top: 40px;
+  }
+
+  .sticker-5 {
+    width: 180px;
+    left: 680px;
+    top: 0px;
+  }
+
+  .sticker-6 {
+    width: 180px;
+    left: 750px;
+    top: -10px;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .sticker-1 {
+    width: 120px;
+    left: -20px;
+    top: 30px;
+  }
+
+  .sticker-2 {
+    width: 110px;
+    left: 60px;
+    top: 80px;
+  }
+
+  .sticker-3 {
+    width: 140px;
+    left: 120px;
+    top: 20px;
+  }
+
+  .sticker-4 {
+    width: 140px;
+    left: 450px;
+    top: 40px;
+  }
+
+  .sticker-5 {
+    width: 140px;
+    right: 40px;
+    left: auto;
+    top: 10px;
+  }
+
+  .sticker-6 {
+    width: 140px;
+    left: 570px;
+    right: auto;
+    top: 65px;
+  }
+}
+
+@media (max-width: 680px) {
+  .sticker-1,
+  .sticker-2,
+  .sticker-3,
+  .sticker-4,
+  .sticker-5,
+  .sticker-6 {
+    display: none;
+  }
 }
