--- a/app/styles/components/hero.css
+++ b/app/styles/components/hero.css
@@ -63,10 +63,15 @@
 
 .hero-sticker {
   object-fit: contain;
+  transition: transform 0.3s ease;
+}
+
+.hero-sticker:hover{
+    transform: scale(1.2) rotate(10deg); /* subtle grow + straighten */
 }
 
 .hero-sticker-filmcam {
-  width: 360px;
+  width: 320px;
   height: 300px;
 }
 
