--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -37,6 +37,15 @@ h3 {
   line-height: normal;
 }
 
+h4 {
+  font-family: var(--font-quicksand);
+  font-size: 18px; 
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+
 p {
   font-family: var(--font-quicksand);
   font-size: 16px;
@@ -45,7 +54,3 @@ p {
   line-height: normal;
 }
 
-.homepage-title {
-  color: black;
-  margin: 32px 0;
-}
