--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,4 @@
 @import "./styles/components/navbar.css";
 @import "./styles/components/hero.css";
 @import "./styles/components/collectionCard.css";
+@import "./styles/components/stickerCard.css";
