feat: add Accordion component for collapsible content; update StickerDetailPage to include Accordion for description and additional information, and enhance styles for sticker detail layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,4 @@
 @import "./styles/components/hero.css";
 @import "./styles/components/collectionCard.css";
 @import "./styles/components/stickerCard.css";
+@import "./styles/components/stickerDetailPage.css"
