--- a/app/styles/components/stickerDetailPage.css
+++ b/app/styles/components/stickerDetailPage.css
@@ -1,9 +1,11 @@
 .sticker-detail-left {
-    background-color: var(--bisque);
-    border: 1px solid black;
-    width: 604px;
-    height: 604px;
-    border-radius: 32px;
+  background-color: var(--bisque);
+  border: 1px solid black;
+  border-radius: 32px;
+
+  width: 100%;
+  max-width: 604px;
+  aspect-ratio: 1 / 1;
 }
 
 .sticker-detail-img {
@@ -44,4 +46,11 @@
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25), 0 2px 2px 0 rgba(0, 0, 0, 0.25);
     font-weight: 500;
     font-size: 16px;
+  }
+
+  @media (max-width: 1024px) {
+    .sticker-detail-img {
+      max-width: 92%;
+      max-height: 92%;
+    }
   }
